--- a/hw2/badger-book/index.html
+++ b/hw2/badger-book/index.html
@@ -3,7 +3,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<script src="https://cs571api.cs.wisc.edu/tools/s25/badgerguard/badgerguard.js" defer></script>
+		<script src="https://cs571.org/tools/s25/badgerguard/badgerguard.js" defer></script>
 		<script src="app.js" defer></script>
 	</head>
 	<body>
